# kata-vending-machine

./: CMakeLists.txt  README.md
Acceptance_tests/: CMakeLists.txt  VendingMachine.cpp
E2E_tests/: CMakeLists.txt  SimpleTest.cpp  VendingMachine.cpp
Google_tests/: CMakeLists.txt  Coin.cpp  CoinRegister.cpp  SimpleTest.cpp  VendingMachine_e2e.cpp
VendingMachine_lib/: CMakeLists.txt  Coin.cpp  CoinRegister.cpp  Dime.cpp  Nickel.cpp  Product.cpp  Product.h  Quarter.cpp  VendingMachine.cpp  VendingMachine.h
VendingMachine_lib/Tests/: CMakeLists.txt  Product.cpp  SimpleUnitTest.cpp  VendingMachine.cpp
